fixed footnotes which were way to far right positioned on small screens, fixed sign logo which was to far left on normal blogposts, new option for images which now can be put together by groups of two and desplayed beside each other, initial commit for blogpost showcase of new blog

--- a/_sass/blog/_blog-font.scss
+++ b/_sass/blog/_blog-font.scss
@@ -533,6 +533,7 @@ blockquote { //overwriting ukit
   ol {
     font-family: $reading;
     font-weight: 300;
+    padding-left: 25px;
   }
   li {
     line-height: 1.8em;
@@ -648,11 +649,15 @@ p.intro a:after {
 
 .bk-signature {
   width: 200px;
-  transform: translate(-10px, calc(-1em - 20px));
+  transform: translate(-5px, calc(-1em - 20px));
   display: none;
   &.bk-success {
     display: block;
   }
+}
+
+.bk-static-style .bk-signature {
+  transform: translate(-10px, calc(-1em - 20px));
 }
 
 .bk-blog-style p img {
@@ -678,6 +683,30 @@ p.intro a:after {
   };
 }
 
+.bk-blog-style p.two {
+  img {
+    max-width: calc(50% - 3px);
+    margin: 0;
+    &:first-of-type {
+      float: left;
+    }
+    &:last-of-type {
+      float: right;
+    }
+  }
+  .inner_frame:after {
+    content: '';
+    display: block;
+    clear: both;
+  }
+  @include media_query($medium){
+    img {
+      max-width: calc(50% - 10px);
+      box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+    }
+  };
+}
+
 .image_frame {
   margin: 2em 0;
   position: relative;
@@ -691,8 +720,22 @@ p.intro a:after {
     margin-left: -10%;
     max-width: unset;
     //box-shadow: 0 0 150px -20px rgba(0,0,0,.3);
+    //box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+  }
+}
+
+p:not(.two) .image_frame {
+  @include media-query($medium){
     box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
   }
+}
+
+.no_caption {
+  margin: 2em 0;
+  @include media_query($medium){
+    margin: 3em 0;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+  };
 }
 
 .block_element {
